spacing fix

--- a/src/index.css
+++ b/src/index.css
@@ -39,7 +39,7 @@
   }
   
   .section-padding {
-    @apply px-4 sm:px-6 lg:px-8 py-16 sm:py-20 lg:py-24;
+    @apply px-4 sm:px-6 lg:px-8 py-24 sm:py-32 lg:py-40;
   }
   
   .container-custom {
